<resources>
    <string name="app_name">sifids</string>
    <string name="email">&email;</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_fishery_office_details">Fishery Office Details</string>
    <string name="pref_fishery_office_title">Fishery Office</string>
    <string name="pref_header_vessel_details">Vessel Details</string>
    <string name="pref_vessel_pln_title">Vessel PLN</string>
    <string name="pref_vessel_name_title">Vessel Name</string>
    <string name="pref_header_owner_master_details">Owner/Master Details</string>
    <string name="pref_owner_master_name_title">Owner/Master Name</string>
    <string name="pref_owner_master_address_title">Owner/Master Address</string>
    <string name="pref_owner_master_email_title">Owner/Master Email Address</string>
    <string name="pref_header_port_details">Usual Landing and Departing Ports</string>
    <string name="pref_port_title">Ports</string>
    <string name="pref_header_gear_details">Gear Details</string>
    <string name="pref_gear_title">Gear</string>
    <string name="pref_mesh_size_title">Mesh Size</string>
    <string name="pref_total_pots_fishing_title">Total Pots Fishing</string>
    <string name="pref_header_species_details">Species Details</string>
    <string name="pref_species_title">Species</string>
    <string name="pref_header_buyer_details">Buyer Details</string>
    <string name="pref_buyer_details_title">Transporter Reg. etc.</string>
    <string name="need_to_consent">You must review the project information and complete the consent form before using the app.</string>
    <string name="participant_info_header">SIFIDS FISH1 App trial Participant Information</string>
    <string name="participant_info_project_title_header">Project Title</string>
    <string name="participant_info_project_title">Capturing and Identifying Experiential Inshore, Small-Scale Fisheries Data to Inform Local Management Strategies Through the Development of a Mobile Phone Application for Onboard Use.</string>
    <string name="participant_info_app_name_header">App Name</string>
    <string name="participant_info_app_name">SIFIDS FISH1 App (for android phones only)</string>
    <string name="participant_info_about_study_header">What is the study about?</string>
    <string name="participant_info_about_study_1">We invite you to participate in a research project aimed at improving the sustainability within commercial inshore fisheries (i.e. vessels of 12m or less fishing out to the 12nm limit). This project aims to trial ways to capture information that could contribute to the industry\'s long-term sustainability and profitability. The project aims to generate this information through industry gathered data via a mobile phone application (Android App) that can be used within the scope of marine spatial planning and fisheries management. The project also seeks to identify how the App could provide a platform to capture useful observations and experiential information from fishers in a standardised format so that these data can either in isolation or collated over time, contribute to fisheries management and marine planning. This will involve engagement (through a trial using the mobile phone App) with a sample of inshore fishers to study the quality of the data provided through the App and will enable a better understanding of the fishing activities.</string>
    <string name="participant_info_about_study_2">This study is being conducted as part of the Scottish Inshore Fisheries Integrated Database System (SIFIDS) project, led by Dr Mark James who is based the University of St Andrews, Scotland.</string>
    <string name="participant_info_what_does_app_do_header">What does the App do?</string>
    <string name="participant_info_what_does_app_do_1">With your agreement, we would like you to start using our App\'s FISH1 form to record information about your daily catches. All information will be sent securely, via email, from your phone to your local Fishery Office and to researchers at the University of St Andrews. The FISH1 form will be available to for you review at any time in the App and can be sent to your/the master\'s email address. The App has been approved by Marine Scotland for this trial.</string>
    <string name="participant_info_what_does_app_do_2">If you are willing to assist us further, we would like to collect some GPS tracking data using the App whilst you are fishing. The GPS track will only be seen by researchers and yourself. This will allow the researchers to understand the areas you fish and frequency you fish in these locations.</string>
    <string name="participant_info_what_does_app_do_3">There is also an observation reporter. This will allow you to record unusual sightings or interactions with wildlife such as whales, dolphins, wrasse and octopus whilst fishing. This information will only be seen by researchers and yourself. These observations will provide useful, often unrecorded information on the distribution of these species.</string>
    <string name="participant_info_what_does_app_do_4">After the trial, we will seek your feedback on the overall functionality of the App and how we might improve it. <b>Please be assured that all the information and data that we collect in this research project will be treated as <u>STRICTLY CONFIDENTIAL</u></b>. The results will be analysed and presented in such a way that no personal details or information which might compromise your fishing activities will be made public.</string>
    <string name="participant_info_do_i_have_to_take_part_header">Do I have to take part?</string>
    <string name="participant_info_do_i_have_to_take_part">This information has been provided to help you decide if you would like to take part. It is up to you and you alone whether or not you wish to participate. If you do decide to take part, you will be free to withdraw from the study at any time without providing a reason.</string>
    <string name="participant_info_what_do_i_do_header">What would I be required to do?</string>
    <string name="participant_info_what_do_i_do">This will vary depending on which part(s) of the App you choose to use. If you agree to collect information on your daily catch, you will be provided with instructions on how to fill in the FISH1 form and how to use the mobile phone App, including the GPS tracker. Recording an observation could take from a few seconds to a couple of minutes depending upon the amount of information you wish to provide.  This can all be done at a time and place that is convenient to you.</string>
    <string name="participant_info_anonymous_confidential_header">Will my participation be Anonymous and Confidential?</string>
    <string name="participant_info_anonymous_confidential_1">The only data Marine Scotland will have access to will be the FISH1 form you submit, via email, from the app to your local Fishery Office.</string>
    <string name="participant_info_anonymous_confidential_2">Project researchers will have access to all the raw data which will be kept confidential. The data collected will only be made available in reports or publications in aggregated or anonymised form. Your permission will be sought in the Participant Consent form for the data you provide, which will be coded*, to be used for future research purposes.</string>
    <string name="participant_info_anonymous_confidential_3">*\'Coded Data\' refers to when data collected by the researcher is identifiable as belonging to a particular participant but is kept with personal identifiers removed.</string>
    <string name="participant_info_data_storage_destruction_header">Storage and Destruction of Data Collected</string>
    <string name="participant_info_data_storage_destruction_1">The data collected will be only be accessed in its raw form by the researchers involved in this study, unless explicit consent for wider access is given by means of the consent form. Your data will be stored for a period of at least 5 years before being destroyed*, i.e. in (1) coded format on the University computer system (2) in the case of hardcopy in a locked storage cupboard.</string>
    <string name="participant_info_data_storage_destruction_2">*Unless secondary data permission has been indicated on the consent form. In the case of electronic data destruction will involve the permanent deletion (overwriting) of files using Eraser© software, while any hard copy records will be cross-cut shredded.</string>
    <string name="participant_info_what_happens_to_results_header">What will happen to the results of the research study?</string>
    <string name="participant_info_what_happens_to_results">The results will be made publicly available after the trial of the mobile phone App in <u>aggregated form or be sufficiently anonymised</u> as to prevent identification of the participant. Also, it is the intent of the researchers that wherever possible outputs from the trials will be submitted for publication as peer reviewed journal articles.</string>
    <string name="participant_info_risks_header">Are there any potential risks to taking part?</string>
    <string name="participant_info_risks">We do not anticipate there being any personal, emotional or financial risks to taking part in these studies. Very limited personal information will be recorded (name and contact details) to be used by the project team for identification purposes. If these data are utilised at any point, it will only be in aggregate form (e.g. participant, age, demographics). <i>In cases where video/images may be taken specific permission (by means of the consent form) will be sort from the participants involved.</i></string>
    <string name="participant_info_questions_header">Questions</string>
    <string name="participant_info_questions">You will have the opportunity to ask any questions in relation to this project before filling in the Consent Form and during the project.</string>
    <string name="participant_info_consent_approval_header">Consent and Approval</string>
    <string name="activity_tracking_header">Track Activity</string>
    <string name="fish_1_forms_header">FISH1 Forms (for owners of vessels 10m and under only)</string>
    <string name="fish_1_form_header">Dates not yet set</string>
    <string name="fish_1_form_pln">PLN</string>
    <string name="fish_1_form_vessel_name">Vessel Name</string>
    <string name="fish_1_form_owner_master">Owner/Master</string>
    <string name="fish_1_form_address">Address</string>
    <string name="fish_1_form_add_row">Add Row Below</string>
    <string name="fish_1_form_save">Save Form</string>
    <string name="fish_1_form_delete">Delete Form</string>
    <string name="fish_1_form_rows_header">FISH1 Form Rows</string>
    <string name="fish_1_form_port">Port: %s</string>
    <string name="location_tracking_disclaimer">
        Any location data recorded by this app will be uploaded silently to a server at the University of St Andrews as part of the SIFIDS project.
        The uploaded data comprises the PLN of your vessel (please set this if you haven\'t already),
        along with the latitude, longitude, timestamp and indicator of fishing activity for each recorded location.
        Please email us at SIFIDS.app@gmail.com for more information or contact the SIFIDS Freephone helpline 08000 433474.
    </string>
    <string name="observation_what_did_you_see">What did you see?</string>
    <string name="observation_how_many">How many did you see?</string>
    <string name="observation_submit">Submit Observation</string>
    <string name="observation_thank_you">Thank you! %s You have submitted %s observations, with %s queued for submission.</string>
    <string name="observation_make_another">Make another observation</string>
    <string name="observation_done">Finished</string>
    <string name="back">Go back</string>
</resources>