<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/obs_what_seen_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observation_what_did_you_see" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.GridLayout
                android:id="@+id/obs_animal_image_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="2">

            </android.support.v7.widget.GridLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/obs_count_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observation_how_many" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bycatch_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observation_how_many"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitCount"
            android:tag="submit_count"
            android:text="@string/observation_submit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="back"
            android:onClick="previousSection"
            android:text="@string/back" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/obs_weight_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observation_what_weight" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bycatch_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observation_what_weight"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitWeight"
            android:tag="submit_weight"
            android:text="@string/observation_submit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="back"
            android:onClick="previousSection"
            android:text="@string/back" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/obs_post_submission_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:id="@+id/obs_submission_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observation_thank_you" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reload"
            android:text="@string/observation_make_another" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goHome"
            android:text="@string/observation_done" />

    </LinearLayout>

</LinearLayout>